# weather

./: .devcontainer.json  .editorconfig  .gitignore  LICENSE.md  README.md  Taskfile.yml  pyproject.toml  requirements.txt
.github/: allowed_signers
.trunk/: trunk.yaml
.trunk/configs/: .sqlfluff  .sqlfluffignore
src/environw_proxy/: lambda_handler.py  objects.py  process.py
terraform/: api_gw.tf  data.tf  lambda.tf  locals.tf  outputs.tf  providers.tf  variables.tf
